# sevone-chat-app

./: .bashrc  .env  .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  Presentation1.pptx  QUICKSTART.md  README.md  USAGE.md  bob_config.json  diagnose_env.py  package-lock.json  package.json  quickstart_remote_mcp.md  setup.sh  ~$Presentation1.pptx
.bob/: custom_modes.yaml  mcp.json
.config/bob/: bob_config.json
chat-interface/: README.md  app.py  requirements.txt
chat-interface/prompts/: sql_expert_prompt.txt
chat-interface/utils/: __init__.py
client/: package-lock.json  package.json
client/src/: App.css  App.js  (+1 more)
docs/: HOW_BOB_USES_MCP.md  MCP_MANUAL_TESTING.md  PHASE2_PLAN.md  PHASE2_QUICK_START.md  PHASE2_SETUP.md  PHASE3_PLAN.md  PROJECT_SUMMARY.md  REMOTE_SERVER_TROUBLESHOOTING.md  SETUP.md  TROUBLESHOOTING.md
mcp-server/: .env  Containerfile  README.md  pyproject.toml  requirements.txt
mcp-server/src/: __init__.py  server.py
mcp-server/src/config/: __init__.py  settings.py
mcp-server/src/database/: __init__.py  connection.py  schema.py  validator.py
mcp-server/src/tools/: __init__.py  insert_query.py  select_query.py
mcp-server/tests/: test_tools.py  test_validation.py
prompts/: sql_expert_system_prompt.md
schemas/: .!82387!sevone_schema.sql  database_schema.sql  nms_local_sample.sql  sevone_schema.sql
scripts/: check_remote_logs.sh  check_remote_mcp_server.sh  deploy_to_remote.sh  fix_remote_server.sh  setup_database.py  test_db_conn_via_mcp.py  test_db_schema_via_mcp.py  test_select_query_tool_mcp.py
server/: index.js
(+8 files in other folders)
